# emacs-config

./: .gitignore  Makefile  README.md  README.org  abbrev_defs  emacs  emacsd  install.sh  profile-dotemacs.el  viper
emacs.d/: .mc-lists.el  Cask  config-lib.el  custom.el  early-init.el  init.el  scratch.org  theme.el
emacs.d/lisp/: 10-functions.el  10-lib.el  10-mode-line.el  15-commands.el  15-modes.el  20-commands.el  20-completing-read.el  20-keys.el  20-transient.el  25-drop-in-replacements.el  25-enhancements.el  25-keys.el  25-terminal.el  30-dired.el  30-eshell.el  30-misc-built-in.el  30-spellcheck.el  35-programming-major-modes.el  35-snippets.el  40-3rd-party.el  40-email.el  40-lisp-helpers.el  40-org.el  40-vcs.el  60-settings.el  70-exwm.el  80-pastes-from-web.el  99-el-patch.el  Makefile
emacs.d/modules/: bbcode-mode.el  c-c++-header.el  exwm-mode-line.el  globalff.el  hippie-expand-ido.el  perltidy.el  quilt.el  recentf-merge.el  scratch-mode.el  vim-line-open.el
emacs.d/my-fixes/: cperl-lineup.el  cualess-global-mark.el  disable-suspend.el  fuck-you-slime.el  lineup.el  pkgbuild-template.el  projectile-switch-project-fix.el  winner-regex.el
emacs.d/project-skeletons/c++-project/: CMakeLists.txt  Doxyfile.in
emacs.d/project-skeletons/c++-project/src/: CMakeLists.txt  main.cpp
emacs.d/skeletons/: asm-skeleton.el  c++-skeleton.el  cmake-skeleton.el  docker-skeleton.el  generic.el  go-skeleton.el  haskell-skeleton.el  java-skeleton.el  nix-skeleton.el  (+11 more)
utils/: debug-lazy-loading.sh  profile-emacs.sh  profile-use-package.sh  straight-freeze.sh
(+145 files in other folders)
